about page & logo & search target ...

--- a/tpl/create_post.html
+++ b/tpl/create_post.html
@@ -13,17 +13,7 @@ $var widgets=['user_panel_widget']
     </div>
     <div class="inner">
         <h2>主题创建指南</h2>
-        <h3>信息量 &nbsp; <span class="fade">Make Sense</span></h3>
-        为了让大家在 V2EX 上的时间更有效率，请在创建主题时考虑：
-        <ul>
-            <li>提问型主题：请用准确的语言描述你遇到的问题，如果问题足够在标题中写完，那么正文是不用填写的，在正文中写 RT 是完全没有必要的。<div class="sep10"></div></li>
-            <li>分享型主题：欢迎你在这里分享你在网上看到的有趣事物，因为 V2EX 是一个主要关于编程和设计的社区，所以这类技术话题在 V2EX 大家会更感兴趣。请不要在 V2EX 分享社会新闻。<div class="sep10"></div></li>
-            <li>作品发布型专题：非常欢迎你在这里发布自己的新作品，我们大家都非常乐意去尝试你的新作。需要注意的是，发布作品请在 <a href="/go/create" target="_blank">分享创造</a> 节点，而非其他节点。<div class="sep10"></div></li>
-            <li>具体技术讨论：请为你的话题选择一个合适的节点，V2EX 为大部分编程语言、数据库、框架、操作系统都建立了专门的节点，访问方式是在 URL 中直接输入 /go/nodename</li>
-        </ul>
-        <div class="sep20"></div>
-        <h3>一个友好的社区 &nbsp; <span class="fade">Be Nice to the Community</span></h3>
-        我们希望 V2EX 能够成为中文世界中氛围最好的社区，而实现这个目标，需要我们所有人的共同努力：友善，公平，尊重知识和事实。
+        <p>我部署这个网站只想跟大家交流 Python 编程，我没有什么额外目的，希望你也如此，感谢伟大的 V2EX，谢谢。</p>
     </div>
 </div>
 </div>
