--- a/tpl/widget/user_panel.html
+++ b/tpl/widget/user_panel.html
@@ -62,10 +62,10 @@ $if session.user_id:
 $else:
     <div class="box">
         <div class="cell">
-            <strong>V2EX = way to explore</strong>
+            <strong>这里填什么？</strong>
             <div class="sep5">
             </div>
-            <span class="fade">V2EX 是一个关于分享和探索的地方</span>
+            <span class="fade">$site_options['description']</span>
         </div>
         <div class="inner">
             <div class="sep5">
