post title display with html

--- a/tpl/node_posts.html
+++ b/tpl/node_posts.html
@@ -40,7 +40,7 @@ $if posts:
                             <img src="$helper.avatar_url(user.avatar)" class="avatar" border="0" align="default" auto=""></a></td>
                         <td width="10">
                         </td>
-                        <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
+                        <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$:post.title</a></span>
                         <div class="sep5">
                         </div>
                         <span class="small fade"><strong><a href="/profile/$user.name">$user.name</a></strong> &nbsp;•&nbsp; $helper.stamp2during(post.last_update)
