--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -12,7 +12,7 @@ $var widgets=['user_panel_widget']
     $:crumb
     <div class="sep10">
     </div>
-    <h1>$post.title</h1>
+    <h1>$:post.title</h1>
     <small class="gray">By <a href="/profile/$user.name">$user.name</a> at $helper.stamp2during(post.time), $post.views 次点击 &nbsp; </small>
     </div>
     <div class="cell">
