--- a/tpl/node_favs.html
+++ b/tpl/node_favs.html
@@ -25,7 +25,7 @@ $if posts:
                 </td>
                 <td width="10">
                 </td>
-                <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
+                <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$:post.title</a></span>
                 <div class="sep5">
                     
                 </div>
