--- a/tpl/user_comments.html
+++ b/tpl/user_comments.html
@@ -6,33 +6,33 @@ $var widgets=['user_panel_widget']
 </div>
 <div class="box">
     <div class="header">
-    	$:crumb
-    	<div class="fr f12"><span class="snow">回复总数&nbsp;</span> <strong class="gray">$total</strong></div>
+        $:crumb
+        <div class="fr f12"><span class="snow">回复总数&nbsp;</span> <strong class="gray">$total</strong></div>
     </div>
 $if comments:
-	$ comment_len = len(comments)
-	$ comment_len_mark = 0
-	$ class_t = 'inner'
-	$for comment in comments:
-		$ comment_len_mark += 1
-		$if comment_len_mark == comment_len:
-			$ class_t = 'cell'
-		$ comment_cur = comment['comment']
-		$ post = comment['post']
-		$ post_user = comment['post_user']
-	    <div class="dock_area">
-	        <table cellpadding="0" cellspacing="0" border="0" width="100%">
-	            <tbody><tr>
-	                <td style="padding: 10px 15px 8px 15px; font-size: 12px; text-align: left;"><div class="fr"><span class="fade">$helper.stamp2during(comment_cur.time)</span></div><span class="gray">回复了 $post_user.name 创建的主题 <span class="chevron">›</span> <a href="/post/$post.id#reply-$comment_cur.id">$post.title</a></span></td> 
-	            </tr>
-	            <tr>
-	                <td align="left"><img src="/static/img/arrow.png" style="margin-left: 20px;"></td>
-	            </tr>
-	        </tbody></table>
-	    </div>
-	    <div class="$class_t">
-	        <div class="reply_content">$comment_cur.content</div>
-	    </div>
+    $ comment_len = len(comments)
+    $ comment_len_mark = 0
+    $ class_t = 'inner'
+    $for comment in comments:
+        $ comment_len_mark += 1
+        $if comment_len_mark == comment_len:
+            $ class_t = 'cell'
+        $ comment_cur = comment['comment']
+        $ post = comment['post']
+        $ post_user = comment['post_user']
+        <div class="dock_area">
+            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                <tbody><tr>
+                    <td style="padding: 10px 15px 8px 15px; font-size: 12px; text-align: left;"><div class="fr"><span class="fade">$helper.stamp2during(comment_cur.time)</span></div><span class="gray">回复了 $post_user.name 创建的主题 <span class="chevron">›</span> <a href="/post/$post.id#reply-$comment_cur.id">$:post.title</a></span></td> 
+                </tr>
+                <tr>
+                    <td align="left"><img src="/static/img/arrow.png" style="margin-left: 20px;"></td>
+                </tr>
+            </tbody></table>
+        </div>
+        <div class="$class_t">
+            <div class="reply_content">$comment_cur.content</div>
+        </div>
     <div class="inner">
         $:pagination
     </div>
