--- a/tpl/widget/hot_posts_tody.html
+++ b/tpl/widget/hot_posts_tody.html
@@ -12,7 +12,7 @@ $def with(posts)
                     <td width="10"></td>
                     <td width="auto" valign="middle">
                         <span class="item_hot_topic_title">
-                        <a href="/post/$post['post'].id">$post['post'].title</a>
+                        <a href="/post/$post['post'].id">$:post['post'].title</a>
                         </span>
                     </td>
                 </tr>
