display cat display_name

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -55,7 +55,7 @@ $for cat_cur in cats:
             <tbody>
                 <tr>
                     <td align="right" width="60">
-                        <span class="fade">$cat.name</span>
+                        <span class="fade">$cat.display_name</span>
                     </td>
                     <td style="line-height: 200%; padding-left: 10px;">
                         $for node in nodes:
