insert notifications from (post_at, post_thanks, comment, comment_thanks, comment_at)

--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -17,7 +17,7 @@ $var widgets=['user_panel_widget']
     </div>
     <div class="cell">
         <div class="topic_content">
-        $post.content
+        $:post.content
         </div>
     </div>
 $if session.user_id:
