--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -6,8 +6,8 @@ $var widgets=['user_panel_widget']
 </div>
 <div class="box" style="border-bottom: 0px;">
     <div class="header"><div class="fr"><a href="/profile/$user.name">
-    	<img src="$helper.avatar_url(user.avatar, 'big')" class="avatar">
-    	</a>
+        <img src="$helper.avatar_url(user.avatar, 'big')" class="avatar">
+        </a>
     </div>
     $:crumb
     <div class="sep10">
@@ -21,95 +21,99 @@ $var widgets=['user_panel_widget']
         </div>
     </div>
 $if session.user_id:
-	<div class="topic_buttons">
-		<div class="fr gray f11" style="line-height: 12px; padding-top: 3px; text-shadow: 0px 1px 0px #fff;">$post.views 次点击 &nbsp;
-		$if favs>0:
-			∙ &nbsp; $favs 人收藏
-		$if post.thanks > 0:
-			∙ &nbsp; $post.thanks 人感谢
-		</div>
-	    $if post_fav:
-	    	<a href="/post/unfav/$post.id" class="tb">取消收藏</a>
-	    $else:
-	    	<a href="/post/fav/$post.id" class="tb">加入收藏</a>
-	    <a href="###" onclick="window.open('https://twitter.com/share?url=http://$site_options['site_url']/post/$post.id&amp;related=$site_options['title']&amp;hashtags=$site_options['title']&amp;text=$post.title', '_blank', 'width=550,height=370'); recordOutboundLink(this, 'Share', 'twitter.com');" class="tb">Tweet</a> &nbsp;
-	    <a href="###" onclick="window.open('http://service.weibo.com/share/share.php?url=http://$site_options['site_url']/post/$post.id&amp;title=$post.title#site_title#', '_blank', 'width=550,height=370'); recordOutboundLink(this, 'Share', 'weibo.com');" class="tb">Weibo</a> &nbsp;
-	    <div id="topic_thank">
-	    $if thanks:
-	    	<span class="f11 gray" style="text-shadow: 0px 1px 0px #fff;">感谢已发送</span>
-	    $else:
-	    	<a href="###" onclick="if (confirm('你确定要向本主题创建者发送谢意？')) { thankTopic($post.id); }" class="tb">感谢</a>
-	    </div>
-	</div>
+    <div class="topic_buttons">
+        <div class="fr gray f11" style="line-height: 12px; padding-top: 3px; text-shadow: 0px 1px 0px #fff;">$post.views 次点击 &nbsp;
+        $if favs>0:
+            ∙ &nbsp; $favs 人收藏
+        $if post.thanks > 0:
+            ∙ &nbsp; $post.thanks 人感谢
+        </div>
+        $if post_fav:
+            <a href="/post/unfav/$post.id" class="tb">取消收藏</a>
+        $else:
+            <a href="/post/fav/$post.id" class="tb">加入收藏</a>
+        <a href="###" onclick="window.open('https://twitter.com/share?url=http://$site_options['site_url']/post/$post.id&amp;related=$site_options['title']&amp;hashtags=$site_options['title']&amp;text=$post.title', '_blank', 'width=550,height=370'); recordOutboundLink(this, 'Share', 'twitter.com');" class="tb">Tweet</a> &nbsp;
+        <a href="###" onclick="window.open('http://service.weibo.com/share/share.php?url=http://$site_options['site_url']/post/$post.id&amp;title=$post.title#site_title#', '_blank', 'width=550,height=370'); recordOutboundLink(this, 'Share', 'weibo.com');" class="tb">Weibo</a> &nbsp;
+        <div id="topic_thank">
+        $if thanks:
+            <span class="f11 gray" style="text-shadow: 0px 1px 0px #fff;">感谢已发送</span>
+        $else:
+            <a href="###" onclick="if (confirm('你确定要向本主题创建者发送谢意？')) { thankTopic($post.id); }" class="tb">感谢</a>
+        </div>
+    </div>
 </div>
 <div class="sep20">
 </div>
 $if post.comments > 0:
-	<div class="box">
-	<div class="cell">
-	    <span class="gray">$post.comments 回复 &nbsp;<strong class="snow">|</strong> &nbsp;直到 $helper.cur_date()</span>
-	</div>
-	$ comment_num = (pagination.cur_page-1) * 100
-	$for comment_cur in comments:
-		$ comment_num += 1
-		$ comment = comment_cur['comment']
-		$ comment_user = comment_cur['user']
-		<div class="cell" id="reply-$comment.id">
-		    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-		        <tbody><tr>
-		            <td width="48" valign="top" align="center"><img src="$helper.avatar_url(comment_user.avatar)" class="avatar" border="0"></td>
-		            <td width="10" valign="top">
-		            </td>
-		            <td width="auto" valign="top" align="left"><div class="fr">
-		            	$if comment_cur['thanks']:
-		            		<div id="thank_area_$comment.id" class="thank_area thanked">感谢已发送</div>
-		            	$else:
-		            		<div id="thank_area_$comment.id" class="thank_area">
-		            			<a href="###" onclick="thankReply($comment.id);" class="thank">感谢回复者</a>
-		            		</div>
-		            &nbsp; <a href="#;" onclick="replyOne('chouj');">
-		            	<img src="/static/img/reply.png" align="absmiddle" border="0" alt="Reply"></a> &nbsp;&nbsp; <span class="no">$comment_num</span></div>
-		                <div class="sep3">
-		                </div>
-		                <strong><a href="/profile/$comment_user.name" class="dark">$comment_user.name</a></strong>&nbsp; &nbsp;
-		                <span class="fade small">$helper.stamp2during(comment.time)</span>
-		                $if comment.thanks > 0:
-		                	<span class="small fade">♥ $comment.thanks</span>
-		                <div class="sep5">
-		                </div>
-		                <div class="reply_content">
-		                	$:comment.content
-		                </div>
-		            </td>
-		        </tr>
-		    </tbody></table>
-		</div>
-	<div class="inner">
-	    $:pagination.output()
-	</div>
-	</div>
+    <div class="box">
+    <div class="cell">
+        <span class="gray">$post.comments 回复 &nbsp;<strong class="snow">|</strong> &nbsp;直到 $helper.cur_date()</span>
+    </div>
+    $ comment_num = (pagination.cur_page-1) * 100
+    $for comment_cur in comments:
+        $ comment_num += 1
+        $ comment = comment_cur['comment']
+        $ comment_user = comment_cur['user']
+        <div class="cell" id="reply-$comment.id">
+            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                <tbody><tr>
+                    <td width="48" valign="top" align="center"><img src="$helper.avatar_url(comment_user.avatar)" class="avatar" border="0"></td>
+                    <td width="10" valign="top">
+                    </td>
+                    <td width="auto" valign="top" align="left">
+                    <div class="fr">
+                        $if session.user_id:
+                            $if comment_cur['thanks']:
+                                <div id="thank_area_$comment.id" class="thank_area thanked">感谢已发送</div>
+                            $else:
+                                <div id="thank_area_$comment.id" class="thank_area">
+                                    <a href="###" onclick="thankReply($comment.id);" class="thank">感谢回复者</a>
+                                </div>
+                            &nbsp; <a href="#;" onclick="click_reply('$comment_user.name');">
+                            <img src="/static/img/reply.png" align="absmiddle" border="0" alt="Reply"></a> &nbsp;&nbsp; 
+                        <span class="no">$comment_num</span>
+                    </div>
+                        <div class="sep3">
+                        </div>
+                        <strong><a href="/profile/$comment_user.name" class="dark">$comment_user.name</a></strong>&nbsp; &nbsp;
+                        <span class="fade small">$helper.stamp2during(comment.time)</span>
+                        $if comment.thanks > 0:
+                            <span class="small fade">♥ $comment.thanks</span>
+                        <div class="sep5">
+                        </div>
+                        <div class="reply_content">
+                            $:comment.content
+                        </div>
+                    </td>
+                </tr>
+            </tbody></table>
+        </div>
+    <div class="inner">
+        $:pagination.output()
+    </div>
+    </div>
 
 $else:
-	<div class="box transparent">
-	    <div class="inner" style="text-align: center">
-	        <span style="color: rgba(0, 0, 0, 0.25);">目前尚无回复</span>
-	    </div>
-	</div>
+    <div class="box transparent">
+        <div class="inner" style="text-align: center">
+            <span style="color: rgba(0, 0, 0, 0.25);">目前尚无回复</span>
+        </div>
+    </div>
 <div class="sep20">
 </div>
 $if session.user_id:
-	<div class="box">
-	    <div class="cell"><div class="fr"><a href="#"><strong>↑</strong> 回到顶部</a></div>
-	        添加一条新回复
-	    </div>
-	    <div class="cell">
-	    	<form action="/comment/$post.id" method="post">
-	    	$:form.render_css()
-	    	</form>
-	    </div>
-	    <div class="inner">
-	        <div class="fr"><a href="/">← $site_options['title']</a></div>
-	        &nbsp;
-	    </div>
-	</div>
+    <div class="box">
+        <div class="cell"><div class="fr"><a href="#"><strong>↑</strong> 回到顶部</a></div>
+            添加一条新回复
+        </div>
+        <div class="cell">
+            <form action="/comment/$post.id" method="post">
+            $:form.render_css()
+            </form>
+        </div>
+        <div class="inner">
+            <div class="fr"><a href="/">← $site_options['title']</a></div>
+            &nbsp;
+        </div>
+    </div>
 </div>
