--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -13,6 +13,7 @@ $else:
         <link rel="stylesheet" href="/static/css/desktop.css" />
         <script type="text/javascript" src="/static/js/jquery.js"></script>
         <script type="text/javascript" src="/static/js/main.js"></script>
+        $:widget.generator('ga_widget')
         <title>$title</title>
     </head>
     <body>
