--- a/tpl/widget/ga.html
+++ b/tpl/widget/ga.html
@@ -4,7 +4,7 @@
   _gaq.push(['_trackPageview']);
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == 'https://ssl') + '.google-analytics.com/ga.js';
+    ga.src ='https://ssl.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
