--- a/tpl/profile.html
+++ b/tpl/profile.html
@@ -100,7 +100,7 @@ $if comments:
             </tbody></table>
         </div>
         <div class="$class_t">
-            <div class="reply_content">$comment_cur.content</div>
+            <div class="reply_content">$:comment_cur.content</div>
         </div>
 <div class="inner"><span class="chevron">»</span> <a href="/profile/$user.name/comments">$user.name 创建的更多回复</a></div>
 </div>
