--- a/tpl/user_comments.html
+++ b/tpl/user_comments.html
@@ -31,7 +31,7 @@ $if comments:
             </tbody></table>
         </div>
         <div class="$class_t">
-            <div class="reply_content">$comment_cur.content</div>
+            <div class="reply_content">$:comment_cur.content</div>
         </div>
     <div class="inner">
         $:pagination
