change google search url

--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -31,7 +31,7 @@ $else:
                                 var dispatch = function() {
                                     q = document.getElementById("q");
                                     if (q.value != "") {
-                                        window.open('https://encrypted.google.com/search?q=site%3A$site_options['site_url']%2Fpost+' + q.value, "_blank");
+                                        window.open('https://www.google.com/search?q=site%3A$site_options['site_url']%2Fpost+' + q.value, "_blank");
                                         return false;
                                     } else {
                                         return false;
