--- a/tpl/node_posts.html
+++ b/tpl/node_posts.html
@@ -28,24 +28,21 @@ $var widgets=['user_panel_widget']
         </div>
         <div id="TopicsNode">
 $if posts:
-    $for post_cur in posts:
-        $ user = post_cur['user']
-        $ post = post_cur['post']
-        $ comment_user = post_cur['comment_user']
-        <div class="cell from_8965">
+    $for post in posts:
+        <div class="cell">
             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                 <tbody>
                     <tr>
-                        <td width="48" valign="top" align="center"><a href="/profile/$user.name">
-                            <img src="$helper.avatar_url(user.avatar)" class="avatar" border="0" align="default" auto=""></a></td>
+                        <td width="48" valign="top" align="center"><a href="/profile/$post.post_user_name">
+                            <img src="$helper.avatar_url(post.post_user_avatar)" class="avatar" border="0" align="default" auto=""></a></td>
                         <td width="10">
                         </td>
                         <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$:post.title</a></span>
                         <div class="sep5">
                         </div>
-                        <span class="small fade"><strong><a href="/profile/$user.name">$user.name</a></strong> &nbsp;•&nbsp; $helper.stamp2during(post.last_update)
-                        $if comment_user is not None:
-                             &nbsp;•&nbsp; 最后回复来自 <strong><a href="/profile/$comment_user.name">$comment_user.name</a></strong>
+                        <span class="small fade"><strong><a href="/profile/$post.post_user_name">$post.post_user_name</a></strong> &nbsp;•&nbsp; $helper.stamp2during(post.last_update)
+                        $if post.comment_user_name:
+                             &nbsp;•&nbsp; 最后回复来自 <strong><a href="/profile/$post.comment_user_name">$post.comment_user_name</a></strong>
                         </span>
                         </td>
                         $if post.comments > 0:
